Fixed footer logo class and confirmed spacing/colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@ body {
 }
 
 /* Logos */
-.logo {
+.logo,
+.footer-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -282,7 +283,7 @@ body {
   width: 264px;
 }
 
-.footer .logo {
+.footer-logo {
   display: inline-block;
   margin-bottom: 16px;
 }
